# pyproject.toml
[project]
name = "flask_multipass_ldap_mlz"
dynamic = ["version"]
[build-system]
requires = ["setuptools>=39", "setuptools_scm[toml]>=3.4"]
build-backend = 'setuptools.build_meta'
[tool.setuptools_scm]
write_to = "flask_multipass_ldap_mlz/version.py" 
[project.entry-points."flask_multipass.identity_providers"]
ldap_mlz = "flask_multipass_ldap_mlz:MLZLDAPIdentityProvider"
